Wall jump + collision fix

--- a/game.css
+++ b/game.css
@@ -5,7 +5,7 @@ body {
     margin: 0px;
 }
 
-#world, #player, #fx, #ui {
+#background, #player, #fx, #ui {
     position: absolute;
     top: 0px;
     left: 0px;
